--- a/css/holyp-grail-layout.css
+++ b/css/holyp-grail-layout.css
@@ -1,3 +1,15 @@
+@media (max-width: 768px) {
+    .HolyGrail-body {
+      flex-direction: column;
+      flex: 1;
+    }
+    .HolyGrail-nav,
+    .HolyGrail-ads,
+    .HolyGrail-content {
+      flex: auto;
+    }
+}
+
 .HolyGrail {
     display: flex;
     min-height: 100vh;
@@ -31,4 +43,6 @@ footer {
     /* 导航放到最左边 */
     order: -1;
 }
+
+
   
